# OmniTrace

./: .gitignore  README.md  demo.py  output.json  pyproject.toml  tracer.py  utils.py
audio_processing/: __init__.py
backends/: __init__.py  minicpm.py  qwen.py
core/: __init__.py  curation.py  text_chunking.py  types.py
examples/: question_audio.json  question_video.json  question_visual_text.json
mapping/: __init__.py  image_text.py  temporal.py
modalities/: __init__.py  audio.py  image_text.py  video.py
scripts/: run_demo.py
src/omnitrace/: __init__.py  cli.py  constants.py  gradients.py  tracer.py
src/omnitrace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/omnitrace/audio_processing/: semantic_chunking.py
src/omnitrace/backends/: __init__.py  minicpm.py  qwen.py
src/omnitrace/core/: curation.py  generation.py  text_chunking.py
src/omnitrace/mapping/: temporal.py  types.py
src/omnitrace/modalities/: audio.py  image_text.py  video.py
