[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omnitrace"
version = "0.1.1"
description = "OmniTrace: multimodal attribution for generative models"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]

dependencies = [
  "torch",
  "transformers",
  "numpy",
  "tqdm",
  "Pillow",
  "opencv-python",
  "soundfile",     
  "librosa",       
  "spacy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
omnitrace = "omnitrace.cli:main"